--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,8 +25,7 @@
   letter-spacing: 2px;
 }
 
-.noob-row,
-.noob-row>a {
+.noob-name {
   font-family: inherit;
   font-size: 14px;
   font-weight: 400;
@@ -35,8 +34,9 @@
   opacity: 0.9;
 }
 
-.noob-row>a:hover {
+.noob-name:hover {
   opacity: 0.6;
+  text-decoration: none;
 }
 .assassin,
 .noob {
@@ -51,13 +51,15 @@
   color: midnightblue;
 }
 
-.points {
+.noob:hover,
+.assassin:hover {
+  opacity: 0.5
+}
+
+.points-lg {
   font-size: 40px;
 }
 
-.noob:hover {
-  opacity: 0.5
-}
-.assassin:hover {
-  opacity: 0.5
+.points-sm {
+  font-size: 20px;
 }
