--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,6 +45,7 @@
 
 .noob {
   color: forestgreen;
+  padding-right: 20px;
 }
 
 .assassin {
@@ -62,4 +63,5 @@
 
 .points-sm {
   font-size: 20px;
+  padding-left: 10px;
 }
